# ChangeLog for dev-python/setuptools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.63 2009/09/27 18:41:43 nixnut Exp $

  27 Sep 2009; nixnut <nixnut@gentoo.org> setuptools-0.6-r1.ebuild:
  ppc stable #284972

*setuptools-0.6.2 (26 Sep 2009)

  26 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.2.ebuild,
  +files/distribute-0.6.2-provide_setuptools.patch:
  Version bump.

  26 Sep 2009; Brent Baude <ranger@gentoo.org> setuptools-0.6-r1.ebuild:
  Marking setuptools-0.6-r1 ppc64 for bug 284972

  18 Sep 2009; Markus Meier <maekke@gentoo.org> setuptools-0.6-r1.ebuild:
  amd64/arm stable, bug #284972

  18 Sep 2009; Jeroen Roovers <jer@gentoo.org> setuptools-0.6-r1.ebuild:
  Stable for HPPA (bug #284972).

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  setuptools-0.6-r1.ebuild:
  stable x86, bug 284972

*setuptools-0.6.1-r1 (13 Sep 2009)

  13 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.1-r1.ebuild:
  Fix version.

*setuptools-0.6.1 (10 Sep 2009)

  10 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.1.ebuild, +files/distribute-0.6.1-USER_SITE.patch,
  +files/distribute-0.6.1-provide_setuptools.patch:
  Version bump.

*setuptools-0.6-r1 (11 Aug 2009)

  11 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -setuptools-0.6.ebuild, +setuptools-0.6-r1.ebuild,
  +files/distribute-0.6-provide_setuptools.patch:
  Provide setuptools.

*setuptools-0.6 (09 Aug 2009)

  09 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -setuptools-0.6_rc7-r1.ebuild, -setuptools-0.6_rc8.ebuild,
  -setuptools-0.6_rc8-r1.ebuild, +setuptools-0.6.ebuild,
  +files/distribute-0.6-sandbox.patch,
  -files/setuptools-0.6_rc8-svn-1.5.patch:
  Version bump.

*setuptools-0.6_rc9-r1 (28 Jul 2009)
