@@ -1,0 +1,50 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/Attic/setuptools-0.6.3.ebuild,v 1.1 2009/09/27 19:20:07 arfrever Exp $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils eutils
+
+DESCRIPTION="A collection of enhancements to the Python distutils including easy install"
+HOMEPAGE="http://pypi.python.org/pypi/distribute"
+SRC_URI="http://pypi.python.org/packages/source/d/distribute/distribute-${PV}.tar.gz"
+
+LICENSE="PSF-2.2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+IUSE=""
+
+DEPEND=""
+RDEPEND=""
+
+S="${WORKDIR}/distribute-${PV}"
+
+DOCS="README.txt docs/easy_install.txt docs/pkg_resources.txt docs/setuptools.txt"
+
+pkg_setup() {
+	if has_version "=${CATEGORY}/${PN}-0.6.1"; then
+		rm -fr "${ROOT}"usr/lib*/python*/site-packages/{,._cfg????_}setuptools-0.6c9-*egg-info
+	fi
+}
+
+src_prepare() {
+	distutils_src_prepare
+
+	epatch "${FILESDIR}/${PN}-0.6_rc7-noexe.patch"
+
+	# Remove tests that access the network (bugs #198312, #191117)
+	rm setuptools/tests/test_packageindex.py
+
+	epatch "${FILESDIR}/distribute-0.6.2-provide_setuptools.patch"
+
+	sed -e "s/0\.6c9/${PV}/" -i distribute_setup.py distribute_setup_dev.py docs/{easy_install.txt,pkg_resources.txt,setuptools.txt} || die "Fixing of versions failed"
+}
+
+src_test() {
+	tests() {
+		PYTHONPATH="." "$(PYTHON)" setup.py test
+	}
+	python_execute_function tests
+}
